<resources>
    <string name="app_name">MultiFeatures</string>
    <string name="calc_result_title">Окно вывода</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_c">C</string>
    <string name="_7">7</string>
    <string name="calc_result">=</string>
    <string name="calc_division">/</string>
    <string name="calc_multi">*</string>
    <string name="main_title">Список фич и примеров</string>
    <string name="main_calc">Калькулятор</string>
    <string name="main_list">Список</string>
    <string name="main_calc_v2">Калькулятор v2</string>
    <string name="main_migrate">Передача данных между экранами</string>
    <string name="migr_string_placeholder">Значение String</string>
    <string name="migr_int_placeholder">Значение Int</string>
    <string name="null_value">Отсутствует</string>
    <string name="main_work_server">Работа с сервером</string>
    <string name="title_activity_field_and_toast">FieldAndToastActivity</string>
    <string name="toast">Работа с полями и Toast</string>
    <string name="show_toast">Show Toast</string>
    <string name="alert">Alert</string>
</resources>
